# Ambar

./: .env.example  .gitignore  PRODUCT.md  README.md  credenciales.txt  repomix-output.xml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605150001_initial_enterprise_schema.py  202605170001_sgdea_archival_custody_foundation.py  202605250001_production_hardening_sgdea_columns.py  202605280001_phase1_operational_foundation.py  202605280002_phase2_document_core.py  202605290001_phase3_custody_logistics.py  202605290002_security_users_profile_polish.py  202605290003_optional_totp_mfa.py  202605300001_restore_hr_positions_table.py  202606020001_document_intelligence_phase1.py  202606020002_document_type_intelligence_phase2.py  202606030001_physical_topography_phase3.py  202606030002_trd_dependencies_lifecycle.py  202606030003_required_document_types.py  202606060001_hr_vacancies_public_portal.py  202606130001_security_audit_enhancements.py  202606130002_hr_company_isolation.py  202606130003_performance_indexes.py  202607090001_enterprise_perf_indexes.py  202607120001_hr_employee_document_type.py  202607140001_correspondence_radicacion.py  202607150001_configurable_dashboards.py  202607190001_user_password_change_required.py
backend/app/: main.py
backend/scripts/: audit_endpoints.py  load_smoke.py
backend/tests/: test_archival_flow.py  test_dashboard_templates.py  test_phase1_flow.py  test_phase2_flow.py  test_phase3_flow.py  test_phase4_flow.py  test_reports_flow.py  test_security.py  test_users_rbac_flow.py
(+212 files in other folders)
