[project]
name = "ambar-api"
version = "0.1.0"
description = "Ambar Core enterprise API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "gunicorn>=22.0.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "pymysql>=1.1.1",
  "python-multipart>=0.0.9",
  "email-validator>=2.2.0",
  "pydantic-settings>=2.3.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.1.0",
  "redis>=5.0.0",
  "minio>=7.2.0",
  "pika>=1.3.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "reports*", "tests*"]